<resources>
    <string name="app_name">Family Map</string>
    <string name="settings_label">Family Map: Settings</string>
    <string name="filters_label">Family Map: Filters</string>
    <string name="search_label">Family Map: Search</string>
    <string name="person_label">Family Map: Person Details</string>
    <string name="login">Login</string>
    <string name="register">Register</string>
    <string name="serv_host">Server Host</string>
    <string name="serv_port">Server Port</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="email">Email</string>
    <string name="gender">Gender</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="search">Search</string>
    <string name="filter">Filter</string>
    <string name="settings">Settings</string>
    <string name="data_main">Click on a marker</string>
    <string name="data_sub">to see event details.</string>
    <string name="life_main">Life Story Lines</string>
    <string name="life_sub">SHOW LIFE STORY LINES</string>
    <string name="family_main">Family Tree Lines</string>
    <string name="family_sub">SHOW TREE LINES</string>
    <string name="spouse_main">Spouse Lines</string>
    <string name="spouse_sub">SHOW SPOUSE LINES</string>
    <string name="father_main">Father\'s Side</string>
    <string name="father_sub">FILTER BY FATHER\'S SIDE OF FAMILY</string>
    <string name="mother_main">Mother\'s Side</string>
    <string name="mother_sub">FILTER BY MOTHER\'S SIDE OF FAMILY</string>
    <string name="male_main">Male Events</string>
    <string name="male_sub">FILTER EVENTS BASED ON GENDER</string>
    <string name="female_main">Female Filter</string>
    <string name="female_sub">FILTER EVENTS BASED ON GENDER</string>
    <string name="map_main">Map Type</string>
    <string name="map_sub">BACKGROUND DISPLAY ON MAP</string>
    <string name="sync_main">Re-sync Data</string>
    <string name="sync_sub">FROM FAMILY MAP SERVICE</string>
    <string name="logout_main">Logout</string>
    <string name="logout_sub">RETURNS TO LOGIN SCREEN</string>
    <string name="search_hint">type search here...</string>

    <string-array name="map_type_array">
        <item>Normal</item>
        <item>Hybrid</item>
        <item>Satellite</item>
        <item>Terrain</item>
    </string-array>

    <string-array name="settings_colors_array">
        <item>Red</item>
        <item>Green</item>
        <item>Blue</item>
        <item>Yellow</item>
    </string-array>
</resources>
