<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent" >

    <EditText
        android:id="@+id/username"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/TextStyle"
        android:textColorHint="@color/white"
        android:hint="@string/username"
        android:inputType="text" />

    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/TextStyle"
        android:textColorHint="@color/white"
        android:hint="@string/password"
        android:inputType="textPassword" />

    <EditText
        android:id="@+id/first_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/TextStyle"
        android:textColorHint="@color/white"
        android:hint="@string/first_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/last_name"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/TextStyle"
        android:textColorHint="@color/white"
        android:hint="@string/last_name"
        android:inputType="text" />

    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        style="@style/TextStyle"
        android:textColorHint="@color/white"
        android:hint="@string/email"
        android:inputType="textEmailAddress" />

    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="wrap_content" >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingLeft="10dp"
            style="@style/TextStyle"
            android:text="@string/gender" />

        <RadioGroup xmlns:android="http://schemas.android.com/apk/res/android"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">
            <RadioButton android:id="@+id/rdoMale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle"
                android:textSize="@dimen/rdo_txt_size"
                android:text="@string/female" />
            <RadioButton android:id="@+id/rdoFemale"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                style="@style/TextStyle"
                android:textSize="@dimen/rdo_txt_size"
                android:text="@string/male" />
        </RadioGroup>
    </LinearLayout>
</LinearLayout>