<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    tools:context="fmc.ui.SettingsActivity">

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="@dimen/settings_margin_bottom" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/settings_margin_right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/life_main"
                style="@style/SettingsMainTextStyle"
                android:text="@string/life_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/life_sub"
                style="@style/SettingsSubTextStyle"
                android:text="@string/life_sub" />
        </LinearLayout>

        <Spinner
            android:id="@+id/life_lines_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/life_lines_switch"
            android:layout_centerVertical="true"
            android:entries="@array/settings_colors_array" />

        <Switch
            android:id="@+id/life_lines_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/filter_margin_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginBottom="@dimen/settings_margin_bottom" >

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/settings_margin_right" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/family_main"
                style="@style/SettingsMainTextStyle"
                android:text="@string/family_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/family_sub"
                style="@style/SettingsSubTextStyle"
                android:text="@string/family_sub" />
        </LinearLayout>

        <Spinner
            android:id="@+id/family_lines_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/family_lines_switch"
            android:layout_centerVertical="true"
            android:entries="@array/settings_colors_array" />

        <Switch
            android:id="@+id/family_lines_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/filter_margin_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginBottom="@dimen/settings_margin_bottom">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="wrap_content"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical"
            android:layout_marginRight="@dimen/settings_margin_right">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/spouse_main"
                style="@style/SettingsMainTextStyle"
                android:text="@string/spouse_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/spouse_sub"
                style="@style/SettingsSubTextStyle"
                android:text="@string/spouse_sub" />
        </LinearLayout>

        <Spinner
            android:id="@+id/spouse_lines_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@+id/spouse_lines_switch"
            android:layout_centerVertical="true"
            android:entries="@array/settings_colors_array" />

        <Switch
            android:id="@+id/spouse_lines_switch"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:layout_alignParentRight="true"
            android:paddingRight="@dimen/filter_margin_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="wrap_content"
        android:layout_height="wrap_content" android:layout_marginBottom="@dimen/settings_margin_bottom">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/map_main"
                style="@style/SettingsMainTextStyle"
                android:text="@string/map_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:id="@+id/map_sub"
                style="@style/SettingsSubTextStyle"
                android:text="@string/map_sub" />
        </LinearLayout>

        <Spinner
            android:id="@+id/map_type_spinner"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_vertical"
            android:entries="@array/map_type_array"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:paddingRight="@dimen/settings_margin_right" />
    </RelativeLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="@dimen/settings_margin_bottom"
        android:id="@+id/sync">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/SettingsMainTextStyle"
                android:text="@string/sync_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/SettingsSubTextStyle"
                android:text="@string/sync_sub" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:orientation="horizontal" android:layout_width="match_parent"
        android:layout_height="wrap_content" android:layout_marginBottom="@dimen/settings_margin_bottom"
        android:id="@+id/logout">

        <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
            android:orientation="vertical" android:layout_width="match_parent"
            android:layout_height="wrap_content" android:layout_gravity="center_vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/SettingsMainTextStyle"
                android:text="@string/logout_main" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                style="@style/SettingsSubTextStyle"
                android:text="@string/logout_sub" />
        </LinearLayout>
    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>
</LinearLayout>