<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:tools="http://schemas.android.com/tools"
    android:orientation="vertical"
    tools:context="fmc.ui.PersonActivity">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_first"
        style="@style/TextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubTextStyle"
        android:text="@string/first_name"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_last"
        style="@style/TextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubTextStyle"
        android:text="@string/last_name"/>
    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:background="@android:color/darker_gray"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/data_gender"
        style="@style/TextStyle"/>
    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        style="@style/SubTextStyle"
        android:text="@string/gender"/>

    <android.support.v7.widget.RecyclerView
        android:id="@+id/data_recycler"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"/>

</LinearLayout>